# the-last-eichhof

./: .bazelrc  .editorconfig  .gitignore  BALLER.ASH  BALLER.C  BALLER.H  BALLER.PRJ  BALLER.PRJ.license  BIT0.C  BUILD.bazel  COMBINER.C  COMPRESS.C  CONTRIBUTING.md  CONVERT.C  DESCRIPT.C  EDIT.C  EDIT.PRJ  EWD.C  EXPL.C  EXPL.PRJ  FILEMAN.C  FILEMAN.H  GAMEASM.ASM  GAMEPLAY.C  GLOBDEFS.H  HISCORE.C  INTRO.C  KEY.BAS  LOAD256.C  LOADIFF.C  LOWMOUSE.H  MENU.C  MODULE.bazel  MOUSE.C  MOUSE.H  MOUSEASM.ASM  README  README.md  REUSE.toml  SHOP.C  (+28 more)
.github/workflows/: main.yml
LICENSES/: LicenseRef-TLE.txt
Meganob/: Abstractions.fs  ArtifactTypeRegistry.fs  Artifacts.fs  AssemblyInfo.fs  BuildContext.fs  BuildSystem.fs  BuildTask.fs  CacheConfig.fs  CacheKey.fs  CacheManager.fs  Dependency.fs  Hash.fs  Meganob.fsproj  Reporter.fs  Target.fs  TargetResults.fs  TaskExecutor.fs  Tasks.fs
Meganob.Tests/: BuildSystemExecutionTests.fs  CacheKeyTests.fs  CacheManagerTests.fs  DependencyTests.fs  Meganob.Tests.fsproj  Program.fs  TaskExecutorTests.fs
docs/: credits.2.png.license
scripts/: Install-DOSBox-X.ps1  github-actions.fsx
tools/: BUILD.bazel
tools/dos_cc/: dos_cc.bzl
